--- a/lab1/Part1_TensorFlow.ipynb
+++ b/lab1/Part1_TensorFlow.ipynb
@@ -63,7 +63,7 @@
         "# http://introtodeeplearning.com\n",
         "#"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -88,10 +88,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "LkaimNJfYZ2w",
-        "outputId": "eb399779-fdd4-4648-fe5c-15a8e79a2127",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b1f9cc02-a341-4bd3-9310-f7acad1b9996"
       },
       "source": [
         "%tensorflow_version 2.x\n",
@@ -104,7 +104,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
           "text": [
             "Collecting mitdeeplearning\n",
             "  Downloading mitdeeplearning-0.2.0.tar.gz (2.1 MB)\n",
-            "\u001b[K     |████████████████████████████████| 2.1 MB 5.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.1 MB 5.6 MB/s \n",
             "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (1.19.5)\n",
             "Requirement already satisfied: regex in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (2019.12.20)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (4.62.0)\n",
@@ -123,7 +123,7 @@
             "Requirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from pyglet<=1.5.0,>=1.4.0->gym->mitdeeplearning) (0.16.0)\n",
             "Building wheels for collected packages: mitdeeplearning\n",
             "  Building wheel for mitdeeplearning (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for mitdeeplearning: filename=mitdeeplearning-0.2.0-py3-none-any.whl size=2115442 sha256=90c74e76a5ee8e3abb68c06d2934c9c973ee0d661e0a4c52538093dd63d511fe\n",
+            "  Created wheel for mitdeeplearning: filename=mitdeeplearning-0.2.0-py3-none-any.whl size=2115442 sha256=84c1f9322229023ad734c73c48e230e3423c39f6fe6f8b4e34e3bc73319cba17\n",
             "  Stored in directory: /root/.cache/pip/wheels/9a/b9/4f/99b7c8c5c75355550b83e1fcfc02956fb40c35eb01e2262877\n",
             "Successfully built mitdeeplearning\n",
             "Installing collected packages: mitdeeplearning\n",
@@ -151,10 +151,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "tFxztZQInlAB",
-        "outputId": "30e52700-d696-49ed-c0ca-a01e7288cca7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3b328b09-9669-4ac7-c194-e5fc545d80d8"
       },
       "source": [
         "sport = tf.constant(\"Tennis\", tf.string)\n",
@@ -163,7 +163,7 @@
         "print(\"`sport` is a {}-d Tensor\".format(tf.rank(sport).numpy()))\n",
         "print(\"`number` is a {}-d Tensor\".format(tf.rank(number).numpy()))"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,10 +188,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "oaHXABe8oPcO",
-        "outputId": "ea9e589f-cc49-4c90-df9e-8f84f95c5af1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "07299217-c143-4e10-97a5-2aca04c6df98"
       },
       "source": [
         "sports = tf.constant([\"Tennis\", \"Basketball\"], tf.string)\n",
@@ -200,7 +200,7 @@
         "print(\"`sports` is a {}-d Tensor with shape: {}\".format(tf.rank(sports).numpy(), tf.shape(sports)))\n",
         "print(\"`numbers` is a {}-d Tensor with shape: {}\".format(tf.rank(numbers).numpy(), tf.shape(numbers)))"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,22 +238,22 @@
         "assert isinstance(matrix, tf.Tensor), \"matrix must be a tf Tensor object\"\n",
         "assert tf.rank(matrix).numpy() == 2\n"
       ],
-      "execution_count": 31,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "C_KUTV3y8QjP",
-        "outputId": "2ba39148-4220-4dd8-edeb-47b6295c194d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2b7bad7c-870f-4311-ae06-aeaecd914bec"
       },
       "source": [
         "matrix"
       ],
-      "execution_count": 33,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +266,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 7
         }
       ]
     },
@@ -286,7 +286,7 @@
         "assert tf.shape(images).numpy().tolist() == [10, 256, 256, 3], \"matrix is incorrect shape\"\n",
         "\n"
       ],
-      "execution_count": 34,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -302,10 +302,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "FhaufyObuLEG",
-        "outputId": "43269b1e-9c61-42e6-b133-66c467a2e427",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ec64309b-f08c-470c-ece4-e6da4a535ae9"
       },
       "source": [
         "row_vector = matrix[1]\n",
@@ -316,7 +316,7 @@
         "print(\"`column_vector`: {}\".format(column_vector.numpy()))\n",
         "print(\"`scalar`: {}\".format(scalar.numpy()))"
       ],
-      "execution_count": 35,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,7 +345,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X_YJrZsxYZ2z"
+        "id": "X_YJrZsxYZ2z",
+        "outputId": "43b9be58-1f05-44d1-9dbe-fdf5b76171c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Create the nodes in the graph, and initialize values\n",
@@ -358,8 +362,17 @@
         "print(c1)\n",
         "print(c2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(76, shape=(), dtype=int32)\n",
+            "tf.Tensor(76, shape=(), dtype=int32)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -390,12 +403,12 @@
         "# Construct a simple computation function\n",
         "def func(a,b):\n",
         "  '''TODO: Define the operation for c, d, e (use tf.add, tf.subtract, tf.multiply).'''\n",
-        "  c = # TODO\n",
-        "  d = # TODO\n",
-        "  e = # TODO\n",
+        "  c = tf.add(a,b)\n",
+        "  d = tf.subtract(b,1)\n",
+        "  e = tf.multiply(c,d)\n",
         "  return e"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -410,7 +423,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pnwsf8w2uF7p"
+        "id": "pnwsf8w2uF7p",
+        "outputId": "e0e8fcef-2387-4fd9-8512-aad579a9f3c6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Consider example values for a,b\n",
@@ -419,8 +436,16 @@
         "e_out = func(a,b)\n",
         "print(e_out)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(6.0, shape=(), dtype=float32)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
