--- a/lab1/Part1_TensorFlow.ipynb
+++ b/lab1/Part1_TensorFlow.ipynb
@@ -63,7 +63,7 @@
         "# http://introtodeeplearning.com\n",
         "#"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -91,7 +91,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b1f9cc02-a341-4bd3-9310-f7acad1b9996"
+        "outputId": "0a6cadef-73a9-42f6-b037-cf2d3048db63"
       },
       "source": [
         "%tensorflow_version 2.x\n",
@@ -104,7 +104,7 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,7 @@
           "text": [
             "Collecting mitdeeplearning\n",
             "  Downloading mitdeeplearning-0.2.0.tar.gz (2.1 MB)\n",
-            "\u001b[K     |████████████████████████████████| 2.1 MB 5.6 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.1 MB 5.2 MB/s \n",
             "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (1.19.5)\n",
             "Requirement already satisfied: regex in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (2019.12.20)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (4.62.0)\n",
@@ -123,7 +123,7 @@
             "Requirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from pyglet<=1.5.0,>=1.4.0->gym->mitdeeplearning) (0.16.0)\n",
             "Building wheels for collected packages: mitdeeplearning\n",
             "  Building wheel for mitdeeplearning (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for mitdeeplearning: filename=mitdeeplearning-0.2.0-py3-none-any.whl size=2115442 sha256=84c1f9322229023ad734c73c48e230e3423c39f6fe6f8b4e34e3bc73319cba17\n",
+            "  Created wheel for mitdeeplearning: filename=mitdeeplearning-0.2.0-py3-none-any.whl size=2115442 sha256=a8a593d8848bf76b7509a253fc0f74c7967b7b76c0cd77a5ae7b92aee425fb49\n",
             "  Stored in directory: /root/.cache/pip/wheels/9a/b9/4f/99b7c8c5c75355550b83e1fcfc02956fb40c35eb01e2262877\n",
             "Successfully built mitdeeplearning\n",
             "Installing collected packages: mitdeeplearning\n",
@@ -154,7 +154,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3b328b09-9669-4ac7-c194-e5fc545d80d8"
+        "outputId": "692757c6-2c74-4449-929b-ed655bc94c03"
       },
       "source": [
         "sport = tf.constant(\"Tennis\", tf.string)\n",
@@ -163,7 +163,7 @@
         "print(\"`sport` is a {}-d Tensor\".format(tf.rank(sport).numpy()))\n",
         "print(\"`number` is a {}-d Tensor\".format(tf.rank(number).numpy()))"
       ],
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +191,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "07299217-c143-4e10-97a5-2aca04c6df98"
+        "outputId": "82474b27-3a87-4492-9949-540bf688af09"
       },
       "source": [
         "sports = tf.constant([\"Tennis\", \"Basketball\"], tf.string)\n",
@@ -200,7 +200,7 @@
         "print(\"`sports` is a {}-d Tensor with shape: {}\".format(tf.rank(sports).numpy(), tf.shape(sports)))\n",
         "print(\"`numbers` is a {}-d Tensor with shape: {}\".format(tf.rank(numbers).numpy(), tf.shape(numbers)))"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,7 +238,7 @@
         "assert isinstance(matrix, tf.Tensor), \"matrix must be a tf Tensor object\"\n",
         "assert tf.rank(matrix).numpy() == 2\n"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -248,12 +248,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2b7bad7c-870f-4311-ae06-aeaecd914bec"
+        "outputId": "be97a35d-0ef3-4f82-b10b-db30c22dd21d"
       },
       "source": [
         "matrix"
       ],
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -266,7 +266,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -286,7 +286,7 @@
         "assert tf.shape(images).numpy().tolist() == [10, 256, 256, 3], \"matrix is incorrect shape\"\n",
         "\n"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -305,7 +305,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ec64309b-f08c-470c-ece4-e6da4a535ae9"
+        "outputId": "df65dd5f-7ba0-4e7d-ba4e-67b24273e297"
       },
       "source": [
         "row_vector = matrix[1]\n",
@@ -316,7 +316,7 @@
         "print(\"`column_vector`: {}\".format(column_vector.numpy()))\n",
         "print(\"`scalar`: {}\".format(scalar.numpy()))"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,10 +346,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "X_YJrZsxYZ2z",
-        "outputId": "43b9be58-1f05-44d1-9dbe-fdf5b76171c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "967bac7d-2667-4a84-f44c-ca451767578f"
       },
       "source": [
         "# Create the nodes in the graph, and initialize values\n",
@@ -362,7 +362,7 @@
         "print(c1)\n",
         "print(c2)"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -408,7 +408,7 @@
         "  e = tf.multiply(c,d)\n",
         "  return e"
       ],
-      "execution_count": 13,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -424,10 +424,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "pnwsf8w2uF7p",
-        "outputId": "e0e8fcef-2387-4fd9-8512-aad579a9f3c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c7b5c165-e4dd-426c-f458-728242ab467d"
       },
       "source": [
         "# Consider example values for a,b\n",
@@ -436,7 +436,7 @@
         "e_out = func(a,b)\n",
         "print(e_out)"
       ],
-      "execution_count": 14,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +475,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HutbJk-1kHPh"
+        "id": "HutbJk-1kHPh",
+        "outputId": "19360024-b68c-423c-831c-668425033cd2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "### Defining a network Layer ###\n",
@@ -498,10 +502,10 @@
         "\n",
         "  def call(self, x):\n",
         "    '''TODO: define the operation for z (hint: use tf.matmul)'''\n",
-        "    z = # TODO\n",
+        "    z = tf.matmul(x,self.W) + self.b\n",
         "\n",
         "    '''TODO: define the operation for out (hint: use tf.sigmoid)'''\n",
-        "    y = # TODO\n",
+        "    y = tf.sigmoid(z)\n",
         "    return y\n",
         "\n",
         "# Since layer parameters are initialized randomly, we will set a random seed for reproducibility\n",
@@ -515,8 +519,27 @@
         "print(y.numpy())\n",
         "mdl.lab1.test_custom_dense_layer_output(y)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.2697859  0.45750412 0.66536945]]\n",
+            "[PASS] test_custom_dense_layer_output\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -543,18 +566,18 @@
         "n_output_nodes = 3\n",
         "\n",
         "# First define the model \n",
-        "model = Sequential()\n",
+        "model = Sequential() # o modelo foi definido, sem função de ativação, no modo mais basico de x*w + b\n",
         "\n",
         "'''TODO: Define a dense (fully connected) layer to compute z'''\n",
         "# Remember: dense layers are defined by the parameters W and b!\n",
         "# You can read more about the initialization of W and b in the TF documentation :) \n",
         "# https://www.tensorflow.org/api_docs/python/tf/keras/layers/Dense?version=stable\n",
-        "dense_layer = # TODO\n",
+        "dense_layer = Dense(n_output_nodes) # units = 3 que é a preparaçoa do tensor para o numero de outputs y0, y1, y2\n",
         "\n",
         "# Add the dense layer to the model\n",
         "model.add(dense_layer)\n"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -569,18 +592,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sg23OczByRDb"
+        "id": "sg23OczByRDb",
+        "outputId": "b6ab9133-5e2c-4ceb-e4bb-812880007f11",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Test model with example input\n",
-        "x_input = tf.constant([[1,2.]], shape=(1,2))\n",
+        "x_input = tf.constant([[1,2.]], shape=(1,2)) # w e b são aleatorios, definidos já pela função\n",
         "\n",
         "'''TODO: feed input into the model and predict the output!'''\n",
-        "model_output = # TODO\n",
+        "model_output = model(x_input)\n",
         "print(model_output)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor([[ 0.24415088  0.6485772  -1.9461871 ]], shape=(1, 3), dtype=float32)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
