--- a/lab3/RL.ipynb
+++ b/lab3/RL.ipynb
@@ -51,7 +51,7 @@
         "# http://introtodeeplearning.com\n",
         "#"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -87,10 +87,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "EvdePP-VyVWp",
+        "outputId": "a2744f67-a6d2-4c13-e9f6-36158fd260e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9c56276f-04ef-480e-f926-e8df7fc54025"
+        }
       },
       "source": [
         "#Install some dependencies for visualizing the agents\n",
@@ -112,7 +112,7 @@
         "!pip install mitdeeplearning\n",
         "import mitdeeplearning as mdl"
       ],
-      "execution_count": 1,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,18 +120,18 @@
           "text": [
             "Collecting mitdeeplearning\n",
             "  Downloading mitdeeplearning-0.2.0.tar.gz (2.1 MB)\n",
-            "\u001b[K     |████████████████████████████████| 2.1 MB 5.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 2.1 MB 5.4 MB/s \n",
             "\u001b[?25hRequirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (1.19.5)\n",
             "Requirement already satisfied: regex in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (2019.12.20)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (4.62.3)\n",
             "Requirement already satisfied: gym in /usr/local/lib/python3.7/dist-packages (from mitdeeplearning) (0.17.3)\n",
             "Requirement already satisfied: cloudpickle<1.7.0,>=1.2.0 in /usr/local/lib/python3.7/dist-packages (from gym->mitdeeplearning) (1.3.0)\n",
-            "Requirement already satisfied: pyglet<=1.5.0,>=1.4.0 in /usr/local/lib/python3.7/dist-packages (from gym->mitdeeplearning) (1.5.0)\n",
             "Requirement already satisfied: scipy in /usr/local/lib/python3.7/dist-packages (from gym->mitdeeplearning) (1.4.1)\n",
+            "Requirement already satisfied: pyglet<=1.5.0,>=1.4.0 in /usr/local/lib/python3.7/dist-packages (from gym->mitdeeplearning) (1.5.0)\n",
             "Requirement already satisfied: future in /usr/local/lib/python3.7/dist-packages (from pyglet<=1.5.0,>=1.4.0->gym->mitdeeplearning) (0.16.0)\n",
             "Building wheels for collected packages: mitdeeplearning\n",
             "  Building wheel for mitdeeplearning (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for mitdeeplearning: filename=mitdeeplearning-0.2.0-py3-none-any.whl size=2115442 sha256=7059f8b1594ed9e572bc16b65c3f7a8d1b4d3bfa09f039d90885e4b8520575fe\n",
+            "  Created wheel for mitdeeplearning: filename=mitdeeplearning-0.2.0-py3-none-any.whl size=2115442 sha256=9782257a86a18eca0578d0d14ad5f74a38535521b074128fefa10a37a2df0834\n",
             "  Stored in directory: /root/.cache/pip/wheels/9a/b9/4f/99b7c8c5c75355550b83e1fcfc02956fb40c35eb01e2262877\n",
             "Successfully built mitdeeplearning\n",
             "Installing collected packages: mitdeeplearning\n",
@@ -175,10 +175,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "quv9SC0iIYFm",
+        "outputId": "03cd3f17-0d69-49e1-a6a3-5d091a319ec2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ae2998c7-c62e-4bad-f780-8e2a40f5b2e5"
+        }
       },
       "source": [
         "### Instantiate the Cartpole environment ###\n",
@@ -186,7 +186,7 @@
         "env = gym.make(\"CartPole-v0\")\n",
         "env.seed(1)"
       ],
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +196,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 6
         }
       ]
     },
@@ -226,16 +226,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "UVJaEcbdIX82",
+        "outputId": "e06d72ac-a89b-4249-ac61-af61ba81d23b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "ec92cd40-63b8-4613-adf8-5dc30d3e5cf8"
+        }
       },
       "source": [
         "n_observations = env.observation_space\n",
         "print(\"Environment has observation space =\", n_observations)"
       ],
-      "execution_count": 3,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,16 +259,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "qc9SIPxBIXrm",
+        "outputId": "1415c1f9-e8a8-46d1-96dc-e1114351fa6e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "19314a59-2b15-4339-8fe7-b8c9fe86185f"
+        }
       },
       "source": [
         "n_actions = env.action_space.n\n",
         "print(\"Number of possible actions that the agent can choose from =\", n_actions)"
       ],
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +287,7 @@
       "source": [
         "### Cartpole agent\n",
         "\n",
-        "Now that we have instantiated the environment and understood the dimensionality of the observation and action spaces, we are ready to define our agent. In deep reinforcement learning, a deep neural network defines the agent. This network will take as input an observation of the environment and output the probability of taking each of the possible actions. Since Cartpole is defined by a low-dimensional observation space, a simple feed-forward neural network should work well for our agent. We will define this using the `Sequential` API.\n"
+        "Now that we have instantiated the environment and understood the dimensionality of the observation and action spaces, we are ready to define our agent. **In deep reinforcement learning, a deep neural network defines the agent**. This network will take as input an observation of the environment and output the probability of taking each of the possible actions. Since Cartpole is defined by a low-dimensional observation space, a simple feed-forward neural network should work well for our agent. We will define this using the `Sequential` API.\n"
       ]
     },
     {
@@ -304,14 +304,16 @@
         "      # First Dense layer\n",
         "      tf.keras.layers.Dense(units=32, activation='relu'),\n",
         "\n",
-        "      \n",
-        "      tf.keras.layers.Dense(units=n_actions, activation=None)\n",
+        "      # '''TODO: Define the last Dense layer, which will provide the network's output.\n",
+        "      # # Think about the space the agent needs to act in!'''\n",
+        "      # # [TODO: Dense layer]\n",
+        "      tf.keras.layers.Dense(units = n_actions, activation = None)\n",
         "  ])\n",
         "  return model\n",
         "\n",
         "cartpole_model = create_cartpole_model()"
       ],
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -352,13 +354,13 @@
         "  \n",
         "  # '''TODO: Choose an action from the categorical distribution defined by the log \n",
         "  #     probabilities of each possible action.'''\n",
-        "  action = tf.random.categorical(logits=logits, num_samples=1) # Olha sobre a probabilidade daquele logit( predição, ou seja,  tf.log([...])) ser amostradaq, e escolhe baseado na predição mais amostrada. https://stackoverflow.com/questions/55063120/can-anyone-give-a-tiny-example-to-explain-the-params-of-tf-random-categorical\n",
+        "  action = tf.random.categorical(logits=logits, num_samples=1)\n",
         "\n",
         "  action = action.numpy().flatten()\n",
         "\n",
         "  return action[0] if single else action"
       ],
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -367,7 +369,7 @@
         "id": "_tR9uAWcTnkr"
       },
       "source": [
-        "## 3.2 Define the agent's memory <- parei aqui\n",
+        "## 3.2 Define the agent's memory\n",
         "\n",
         "Now that we have instantiated the environment and defined the agent network architecture and action function, we are ready to move on to the next step in our RL workflow:\n",
         "1. **Initialize our environment and our agent**: here we will describe the different observations and actions the agent can make in the environemnt.\n",
@@ -393,7 +395,7 @@
         "\n",
         "  # Resets/restarts the memory buffer\n",
         "  def clear(self): \n",
-        "      self.observations = []\n",
+        "      self.observations = [] # self indicando atributo da classe.\n",
         "      self.actions = []\n",
         "      self.rewards = []\n",
         "\n",
@@ -401,19 +403,22 @@
         "  def add_to_memory(self, new_observation, new_action, new_reward): \n",
         "      self.observations.append(new_observation)\n",
         "\n",
-        "      '''TODO: update the list of actions with new action'''\n",
-        "      # TODO: your update code here\n",
+        "      # '''TODO: update the list of actions with new action'''\n",
+        "      # # TODO: your update code here\n",
+        "      self.actions.append(new_action)\n",
         "\n",
-        "      '''TODO: update the list of rewards with new reward'''\n",
+        "\n",
+        "      # '''TODO: update the list of rewards with new reward'''\n",
         "      # TODO: your update code here\n",
+        "      self.rewards.append(new_reward)\n",
         "\n",
         "# Helper function to combine a list of Memory objects into a single Memory.\n",
         "#     This will be very useful for batching.\n",
-        "def aggregate_memories(memories):\n",
-        "  batch_memory = Memory()\n",
+        "def aggregate_memories(memories): # fora da classe. memories se refere a vários objetos criados com a classe Memory. cada objeto com seu array de actions, observations e rewards.\n",
+        "  batch_memory = Memory() # objeto instanciando a classe para usar suas propriedades\n",
         "  \n",
         "  for memory in memories:\n",
-        "    for step in zip(memory.observations, memory.actions, memory.rewards):\n",
+        "    for step in zip(memory.observations, memory.actions, memory.rewards): #pegando as observaçoes, açoes e recompensas dos diferentes objetos memoria e juntando tudo num batch!\n",
         "      batch_memory.add_to_memory(*step)\n",
         "  \n",
         "  return batch_memory\n",
@@ -421,7 +426,7 @@
         "# Instantiate a single Memory buffer\n",
         "memory = Memory()"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
